--- a/gac/src/main/resources/application.properties
+++ b/gac/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/gac?useUnicode=true&useJDBCCom
 spring.datasource.username=user
 spring.datasource.password=user
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
